# agent

./: .air.toml  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .lintcmds  .npmrc  .oxfmtrc.json  .pre-commit-config.yaml  .trivyignore  .trivyignore.yaml  .yamlfmt  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.txt  DEVELOPMENT.md  Dockerfile  Dockerfile.orchestrator  Dockerfile.sandbox-lang-executor.python  Dockerfile.sandbox.javascript  Dockerfile.sandbox.python  Dockerfile.smokescreen  Dockerfile.worker.golang  Dockerfile.worker.javascript  Dockerfile.worker.python  Dockerfile.worker.task-manager  LICENSE  LICENSE.txt  Makefile  Makefile.ephemeral  README.md  SECURITY.md  buckets.json  buckets.minimal.json  codecov.yml  compose.ephemeral-dev.yaml  compose.ephemeral.yaml  (+23 more)
clients/python/: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
clients/python/docs/: config.mako  credits.mako  logo.mako
clients/python/docs/superblocks_agent_sdk/: index.html
clients/python/superblocks_agent_sdk/: __init__.py  _constant.py  _version.py
clients/python/superblocks_agent_sdk/_util/: convert.py  decorator.py  doc.py  generate.py
clients/python/superblocks_agent_sdk/api/: Api.py  Config.py  Result.py  ViewMode.py  __init__.py
clients/python/superblocks_agent_sdk/client/: Client.py  Config.py  __init__.py
clients/python/superblocks_agent_sdk/types_/: _BaseEnum.py  _DictDeserializable.py  _DictSerializable.py  _Dictizable.py  _client.py  common.py
clients/python/superblocks_types/validate/: validate_pb2.py
clients/python/test_e2e/: .env  env.py  fixtures.py  test_api.py  util.py
clients/python/test_unit/test_api/: test_Api.py  test_Result.py  test_ViewMode.py
clients/python/test_unit/test_client/: test_Client.py
clients/python/test_unit/test_util/: test_convert.py  test_decorator.py  test_generate.py
workers/ephemeral/python-sandbox/: .gitignore  Makefile  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  tox.ini
workers/ephemeral/python-sandbox/src/: __init__.py  constants.py  entry.py  executor.py  log.py  network_proxy.py  plugin.py  props_reader.py  restricted.py  service.py  superblocks.py  utils.py
workers/ephemeral/python-sandbox/test/: conftest.py  test_executor.py  test_graceful_shutdown.py  test_grpc_service.py  test_restricted.py  test_superblocks_types.py  test_variable_client.py
workers/python/: .env.local  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamlfmt  Dockerfile.freeze  Makefile  README.md  canalyst.json  docker-compose.yaml  mypy.ini  pyproject.toml  requirements-slim.txt  requirements.dev.txt  requirements.txt  setup.cfg  slim.Dockerfile  tox.ini
workers/python/config/: .env.ci  .env.prod  .env.prod-eu  .env.staging
workers/python/helm/: Chart.yaml  values.yaml
workers/python/helm-values/: ci.yaml
workers/python/helm/templates/: _helpers.tpl  deployment.yaml  externalsecret.yaml  secrets.yaml
workers/python/integration_test/: conftest.py  redis_fixtures.py  test_execution.py  test_files.py  test_permissions.py
workers/python/scripts/: add-package.sh  op.sh  speed_test.py
workers/python/src/: constants.py  entry.py  exceptions.py  executor.py  health.py  log.py  metrics.py  models.py  otel.py  pipe.py  remote_log.py  restricted.py  speed.py  superblocks.py  superblocks_json.py  utils.py
workers/python/src/kvstore/: kvstore.py  redis.py
workers/python/src/performance/: utils.py
workers/python/src/plugin/: constants.py  plugin.py  props_builder.py  props_reader.py  props_writer.py
workers/python/src/transport/: constants.py  errors.py  redis.py  signal.py  transport.py
workers/python/src/variables/: constants.py  variable.py  variable_client.py  (+1 more)
workers/python/test/: fixtures.py  test_constants.py  test_health.py  test_integration.py  test_plugin.py  test_props_reader.py  test_restricted.py  test_superblocks.py  test_utils.py  test_variable.py
workers/python/workflows/: add-package.yml  default.yml  deploy-prod.yml  deploy-staging.yml
(+1642 files in other folders)
